# SpeedyFTP

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
UnitTesting/: testCLI.cpp
src/: CLI.h  main.cpp
